# rtos-sensor-fusion

./: CMakeLists.txt  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.yml
intern/include/: FreeRTOSConfig.h
intern/include/sim/: sensor_models.hpp  trajectory.hpp
intern/include/state/: state.hpp
intern/include/tasks/: control_task.hpp  dashboard_task.hpp  estimator_task.hpp  sensor_task.hpp  watchdog_task.hpp
src/: main.cpp  rtos_demo.cpp  rtos_demo.hpp
src/sim/: trajectory.cpp
src/state/: state.cpp
src/tasks/: control_task.cpp  dashboard_task.cpp  estimator_task.cpp  sensor_task.cpp  watchdog_task.cpp
tests/: CMakeLists.txt  dummy_test.cpp  test_control.cpp  test_estimator.cpp  test_sensors.cpp
